--- a/website/style.css
+++ b/website/style.css
@@ -1,5 +1,13 @@
 body {
     background-color: teal;
+    margin: 0;
+    width: 100vw;
+    height: 100%;
+    text-align: center;
+}
+
+#main_title {
+    font-size: 2.5em;
 }
 
 #interaction_container {
@@ -7,4 +15,41 @@ body {
     display: flex;
     flex-direction: column;
     width: 25vw;
+    align-items: left;
+    margin: auto;
+    line-height: 2em;
+}
+
+#zip {
+    margin-bottom: .5em;
+    font-size: 1em;
+}
+
+#feelings {
+    font-size: 1em;
+    margin-bottom: .5em;
+    outline-color: gray;
+}
+
+#generate {
+    width: 8em;
+    /*border-width: .15em;*/
+    padding: .15em;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10%;
+    box-shadow: 1px 2px gray;
+    outline: none;
+}
+
+#generate:hover {
+    background-color: pink;
+}
+
+#generate:active {
+    background-color: pink;
+}
+
+#generate:focus {
+    border: black;
 }
