--- a/website/style.css
+++ b/website/style.css
@@ -1,13 +1,15 @@
 body {
-    background-color: teal;
+    background-image: linear-gradient(to bottom right, rgb(82, 80, 80), black);
     margin: 0;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     text-align: center;
+    color: white;
 }
 
 #main_title {
-    font-size: 2.5em;
+    font-size: 3em;
+    text-shadow: 2px 4px black;
 }
 
 #interaction_container {
@@ -17,10 +19,12 @@ body {
     width: 25vw;
     align-items: left;
     margin: auto;
-    line-height: 2em;
-    background-color: gray;
+    background-color: #246eb9;
     padding: 2em;
     margin-bottom: 2em;
+    color: black;
+    box-shadow: 3px 6px black;
+    border-radius: 2%;
 }
 
 #zip {
@@ -30,8 +34,9 @@ body {
 
 #feelings {
     font-size: 1em;
-    margin-bottom: .5em;
+    margin-bottom: 1em;
     outline-color: gray;
+    height: 10vh;
 }
 
 #generate {
@@ -61,7 +66,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-color: pink;
+    background-color: #f06543;
     padding: 1em;
     width: 30vw;
     margin: auto;
@@ -85,8 +90,8 @@ body {
 
 #temp {
     font-size: 3em;
-    margin-top: 6vh;
-    margin-bottom: 2vh;
+    margin-top: 4vh;
+    margin-bottom: 4vh;
 }
 
 #weather {
